# NetDiagnostics

./: .gitignore  CMakeLists.txt  PROJECT_CHANGES.md  README.md  README_zh_CN.md  README_zh_TW.md  _temp_check.ps1  commit_msg.txt  rebuild.sh  temp_log.txt  ttfb_benchmark.py
.deepseek/state/: subagents.v1.json
.github/actions/android-apk/: action.yml
.github/actions/install-qt-aqt/: action.yml
.github/actions/macos-icon/: action.yml
.github/actions/select-xcode/: action.yml
.github/actions/setup-keychain/: action.yml
.github/workflows/: apple.yml  build-windows-dynamic.yml  build.yml  cleanup-runs.yml  codeql.yml  deploy-testflight.yml  iOS.yml  ios-verify.yml  macOS.yml  test.yml  version.yml
build-baseline/: CMakeCache.txt  CTestTestfile.cmake  cmake_install.cmake
build-baseline/.qt/: QtDeploySupport.cmake
build-baseline/.qt/deploy_qml_imports/: net_diagnostic.cmake
build-baseline/.qt_plugins/: Qt6_QmlPlugins_Imports_net_diagnostic.cmake  Qt6_QmlPlugins_Imports_net_diagnostic.rsp
build-baseline/net_diagnostic_autogen/: deps  mocs_compilation.cpp
build-baseline/tests/: CTestTestfile.cmake  cmake_install.cmake
build-baseline/tests/test_engine_quick_autogen/: deps  mocs_compilation.cpp
build-mockups/: CMakeCache.txt
cmake/: dependencies.cmake  netdiag-target.cmake
doc/: PROJECT_CHANGES.md  app-store-submission-checklist.txt  design-spec.html  design-tokens.json
doc/figma/: README.md  design-preview.html
docs/: 5WHY-TEMPLATE.md  CODE_REVIEW_CHECKLIST.md  privacy-policy.html
mockups/: diagnostic-screen-v2.html
profiles/devices/: all_devices.json  android-oneplus.json  android-pixel8.json  android-pixel9.json  android-s24.json  android-s24u.json  ios-ipad-mini.json  ios-ipadpro11.json  ios-ipadpro13.json  ios-iphone-se.json  ios-iphone15.json  ios-iphone15pm.json  ios-iphone16.json  ios-iphone16pm.json  lx-arm64.json  lx-x64.json  mac-arm64.json  mac-x64.json  win-arm64.json  win-x64.json
profiles/os/: android.json  ios.json  linux.json  macos.json  windows.json
profiles/suites/: full_matrix_test.json  smoke_test.json
profiles/targets/: local_dev.json  public_dns.json
profiles/test_policy/: android_policy.json  ios_policy.json  linux_policy.json  macos_policy.json  windows_policy.json
resources/: Info-macos.plist  Info.plist  macos-dev-id.entitlements  macos.entitlements  netanalysis-sim.desktop  netanalysis.desktop  netanalysis.rc  netdiagnostic.entitlements  qtquickcontrols2.conf  resources.qrc  resources_nativepdf.qrc  resources_qtpdf.qrc  resources_webview.qrc  screens-qmldir
resources/Assets.xcassets/AppIcon.appiconset/: Contents.json
resources/android/: AndroidManifest.xml
resources/cert/: mac_dist.p12
resources/config/: macos.conf
resources/doc/: PROJECT_CHANGES.md  app-store-localization.txt  design-spec.html  design-tokens.json
resources/doc/figma/: README.md
resources/qml/: AppContent.qml  main.qml
resources/qml/screens/: ConfigScreen.qml  DashboardScreen.qml  DiagnosticScreen.qml  ReportScreen.qml  SettingsScreen.qml  SimulatorScreen.qml
resources/qml/simulator/: SimulatorMenuBar.qml  qmldir
resources/qml/theme/: AppTheme.qml  ThemeEngine.qml  Translations.qml  design-system.html  qmldir
resources/qml/widgets/: AppIcon.qml  DiagGroupPanel.qml  DiagResultItem.qml  DiagnosticToolbar.qml  HtmlPreviewWebView.qml  LiveProgressPanel.qml  NativePdfPageView.qml  PdfPreviewView.qml  PortScanConfig.qml  SummaryCards.qml  TargetAnalysisPanel.qml  TargetInputPanel.qml  TestGroupPanel.qml  TestResultItem.qml
review/: HISTORY_ISSUES.md
scripts/: build-all.sh  build-static.ps1  ci-http-server.py  ci-test.ps1  generate-figma-mockups.py  generate-icons.sh  generate-ipad-screenshots.py  generate-mockups.sh  generate-screenshots-sips.sh  generate-screenshots.py  generate-screenshots.sh  pre-commit-check.ps1  prebuild-check.ps1  test-msys2-network.ps1
scripts/installer/: NetDiagnostic.nsi
scripts/ios/: asc-app.sh
scripts/macos/: setup-provisioning-profile.sh
src/: main.cpp  main_simulator.cpp
src/Common/Model/: CaptureFeatureGate.cpp  CaptureFeatureGate.h  DiagId.h  DiagNames.h  DiagnosticResult.cpp  DiagnosticResult.h  ResultProperty.h
src/Common/Platform/: NativePdfDocument.cpp  NativePdfDocument.h  PlatformPdfRenderer.h
src/Common/Services/: DiagnosticTask.cpp  DiagnosticTask.h  DnsResolver.cpp  DnsResolver.h  ProbeDatabase.cpp  ProbeDatabase.h  ServerDbUpdater.cpp  ServerDbUpdater.h
src/Common/Tests/: TestHarness.cpp  TestHarness.h  TestScenarios.cpp  TestScenarios.h
src/Common/Utils/: CrashHandler.h  DebugSwitch.h  Logger.cpp  NetUtil.h  StartupLog.h
src/Common/View/: AppContent.qml  main.qml
src/Configuration/Controller/: ConfigurationController.cpp  ConfigurationController.h
src/app/: AppState.cpp  AppState.h  DiagnosticConfig.cpp  DiagnosticConfig.h  PremiumStore.cpp  PremiumStore.h  ReportEngine.cpp  ReportEngine.h  ResultsModel.cpp  ResultsModel.h  TargetModel.cpp  TargetModel.h
src/controllers/: ControllerFactory.cpp  ControllerFactory.h  IHttpClient.h  INetworkController.h  INetworkProbe.h
src/engine/: IosWiFiHelper.h  IosWiFiHelper.mm  PlatformCommand.cpp  PlatformCommand.h  PlatformStore_ios.mm
src/engine/dostic/: GCommon.h
src/models/: DiagId.h  DiagnosticResult.cpp  DiagnosticResult.h
src/platform/: NativePdfDocument.cpp  NativePdfDocument.h  PlatformPdfRenderer.cpp  PlatformPdfRenderer.h  PlatformPdfRenderer_android.cpp  PlatformPdfRenderer_ios.mm  PlatformPdfRenderer_macos.mm  PlatformShare.cpp  PlatformShare.mm  PlatformStore.mm
src/simulator/: MatrixOrchestrator.cpp  MatrixOrchestrator.h  OSProfile.h  QtConfigAdapter.cpp  QtConfigAdapter.h  ScreenshotService.cpp  ScreenshotService.h  SimulatorConfig.cpp  SimulatorConfig.h  TestPolicy.h
src/testing/: TestHarness.cpp  TestHarness.h  TestScenarios.cpp  TestScenarios.h
src/util/: DiagnosticFormatter.cpp  DiagnosticFormatter.h  DnsResolver.cpp  DnsResolver.h  Logger.cpp  Logger.h  NetUtil.h  PlatformShare.h  PlatformStore.h  StartupLog.h
tests/: CMakeLists.txt  test_engine_quick.cpp
tools/: generate_figma_svgs.py
(+307 files in other folders)
